@@ -1,5 +1,8 @@
 [Changes 1.2.2]
 
+* Change $indextoword() so that the return value numbers the words from 0
+  rather than 1, to align with documentation and EPIC4/5. (caf)
+
 * Correct issue where flood detection could become unreliable. (caf)
 
 * Cast check_ext_mail and check_ext_mail_status function pointers to the
